# libThinkGearCpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
examples/SimpleBrainwaveOSC/: CMakeLists.txt  README.md  TG_OSCSender.cpp  TG_OSCSender.h  TG_UdpSocket.h  main.cpp
examples/SimpleBrainwaveOSC/cmake/: FindLIBLO.cmake
examples/SimpleBrainwaveOSC/tests/: CMakeLists.txt  main.c  thinkgear_test.h
examples/SimpleBrainwaveOSC/tools/: main.c  short_test.h
examples/thinkgear_c_test/: BasicListener.c  BasicListener.h  CMakeLists.txt  main.c
examples/thinkgear_cpp_test/: CMakeLists.txt  ThinkGearMessages.cpp  ThinkGearMessages.h  ThinkGearMonitor.cpp  ThinkGearMonitor.h  main.cpp  thinkgear_test.h
src/: TGAsicEegData.h  TGData_p.h  TGEnums.h  TGVariant.cpp  TGVariant.h  ThinkGear.cpp  ThinkGear.h  ThinkGearDevice.h  ThinkGearEvent.h  ThinkGearEvents.h  ThinkGearPayload.cpp  ThinkGearPayload.h  ThinkGearPayloadParser.cpp  ThinkGearPayloadParser.h  ThinkGearStreamParser.cpp  ThinkGearStreamParser.h  ThinkGearValuesHandler.cpp  ThinkGearValuesHandler.h  ThinkGear_p.h  thinkgear_c.cpp  thinkgear_c.h
src/parser/: TGData.cpp  TGData.h  TGEnums.h  ThinkGearPayloadParser.cpp  ThinkGearPayloadParser.h  ThinkGearStreamParser.cpp  ThinkGearStreamParser.h  ThinkGearValueHandler.h  tgstream_parser_c.cpp
src/signaler/: TGEegData.h  ThinkGearEvents.h  ThinkGearSignaler.cpp  ThinkGearSignaler.h
src/thinkgear/: ThinkGear.cpp  ThinkGear.h  ThinkGear_p.h  thinkgear_c.cpp  thinkgear_c.h
tests/: thinkgear_test_packets.h
tools/thinkgearSimulator/: CMakeLists.txt  README.md  main.c
