cmake_minimum_required(VERSION 3.22)
project(thinkgear_c_test VERSION 1.0.0 LANGUAGES CXX C)
find_package(thinkgearcpp)
add_executable(${PROJECT_NAME} main.c BasicListener.c)
if (BUILD_STATIC)
    target_link_libraries(${PROJECT_NAME} PUBLIC thinkgearcpp)
else()
    target_link_libraries(${PROJECT_NAME} PUBLIC thinkgearcpp_SHARED)
endif()
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
